@@ -403,6 +403,7 @@ if __name__=='pymol.setting':
       seq_view_label_mode  = 363
       surface_ramp_above_mode = 364
       stereo               = 365
+      wizard_prompt_mode   = 366
       
    setting_sc = Shortcut(SettingIndex.__dict__.keys())
 
